kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: Inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Inventory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: Inventory
    spec:
      containers:
        - name: inventory
          image: docker.internal.m0rg.dev/inventory:latest
          securityContext:
            privileged: true
          volumeMounts: 
            - name: printer
              mountPath: /dev/usb
        - name: postgres
          image: postgres
          volumeMounts:
            - name: inventory-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: inventory-data
          persistentVolumeClaim:
            claimName: inventory-claim
        - name: printer
          hostPath:
            path: /dev/usb
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: Inventory
spec:
  type: LoadBalancer
  selector:
    app: Inventory
  ports:
    - name: inventory
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  labels:
    app: Inventory
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: inventory-internal-m0rg-dev-tls
      hosts:
        - inventory.internal.m0rg.dev
  rules:
  - host: inventory.internal.m0rg.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: inventory
              port:
                number: 8080
